Major refactoring and structure changes, removed static