@@ -25,15 +25,12 @@ WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
 package io.joshworks.restclient.http;
 
+import io.joshworks.restclient.Constants;
+import io.joshworks.restclient.http.async.AsyncIdleConnectionMonitorThread;
 import io.joshworks.restclient.http.async.Callback;
-import io.joshworks.restclient.http.async.utils.AsyncIdleConnectionMonitorThread;
-import io.joshworks.restclient.http.exceptions.UnirestException;
-import com.mashape.unirest.http.options.Option;
-import io.joshworks.restclient.http.options.Options;
-import io.joshworks.restclient.http.utils.ClientFactory;
+import io.joshworks.restclient.http.exceptions.RestClientException;
 import io.joshworks.restclient.request.HttpRequest;
 import org.apache.http.HttpEntity;
-import org.apache.http.client.HttpClient;
 import org.apache.http.client.methods.HttpEntityEnclosingRequestBase;
 import org.apache.http.client.methods.HttpGet;
 import org.apache.http.client.methods.HttpHead;
@@ -43,6 +40,7 @@ import org.apache.http.client.methods.HttpPut;
 import org.apache.http.client.methods.HttpRequestBase;
 import org.apache.http.client.methods.HttpUriRequest;
 import org.apache.http.concurrent.FutureCallback;
+import org.apache.http.impl.client.CloseableHttpClient;
 import org.apache.http.impl.nio.client.CloseableHttpAsyncClient;
 import org.apache.http.nio.entity.NByteArrayEntity;
 
@@ -65,9 +63,12 @@ public class HttpClientHelper {
     private static final String CONTENT_TYPE = "content-type";
     private static final String ACCEPT_ENCODING_HEADER = "accept-encoding";
     private static final String USER_AGENT_HEADER = "user-agent";
-    private static final String USER_AGENT = "unirest-java/1.3.11";
+    private static final String USER_AGENT = "restclient-java/1.3.11";
 
-    private static <T> FutureCallback<org.apache.http.HttpResponse> prepareCallback(final Class<T> responseClass, final Callback<T> callback) {
+    private static <T> FutureCallback<org.apache.http.HttpResponse> prepareCallback(
+            final Class<T> responseClass,
+            final Callback<T> callback,
+            final ObjectMapper objectMapper) {
         if (callback == null)
             return null;
 
@@ -78,27 +79,33 @@ public class HttpClientHelper {
             }
 
             public void completed(org.apache.http.HttpResponse arg0) {
-                callback.completed(new HttpResponse<T>(arg0, responseClass));
+                callback.completed(new HttpResponse<>(arg0, responseClass, objectMapper));
             }
 
             public void failed(Exception arg0) {
-                callback.failed(new UnirestException(arg0));
+                callback.failed(new RestClientException(arg0));
             }
 
         };
     }
 
-    public static <T> Future<HttpResponse<T>> requestAsync(HttpRequest request, final Class<T> responseClass, Callback<T> callback) {
-        HttpUriRequest requestObj = prepareRequest(request, true);
+    public static <T> Future<HttpResponse<T>> requestAsync(
+            HttpRequest request,
+            final Class<T> responseClass,
+            Callback<T> callback,
+            CloseableHttpAsyncClient asyncHttpClient,
+            Map<String, Object> defaultHeaders,
+            final ObjectMapper objectMapper,
+            AsyncIdleConnectionMonitorThread monitor) {
 
-        CloseableHttpAsyncClient asyncHttpClient = ClientFactory.getAsyncHttpClient();
+        HttpUriRequest requestObj = prepareRequest(request, true, defaultHeaders);
+
         if (!asyncHttpClient.isRunning()) {
             asyncHttpClient.start();
-            AsyncIdleConnectionMonitorThread asyncIdleConnectionMonitorThread = (AsyncIdleConnectionMonitorThread) Options.getOption(Option.ASYNC_MONITOR);
-            asyncIdleConnectionMonitorThread.start();
+            monitor.start();
         }
 
-        final Future<org.apache.http.HttpResponse> future = asyncHttpClient.execute(requestObj, prepareCallback(responseClass, callback));
+        final Future<org.apache.http.HttpResponse> future = asyncHttpClient.execute(requestObj, prepareCallback(responseClass, callback, objectMapper));
 
         return new Future<HttpResponse<T>>() {
 
@@ -116,43 +123,39 @@ public class HttpClientHelper {
 
             public HttpResponse<T> get() throws InterruptedException, ExecutionException {
                 org.apache.http.HttpResponse httpResponse = future.get();
-                return new HttpResponse<T>(httpResponse, responseClass);
+                return new HttpResponse<>(httpResponse, responseClass, objectMapper);
             }
 
             public HttpResponse<T> get(long timeout, TimeUnit unit) throws InterruptedException, ExecutionException, TimeoutException {
                 org.apache.http.HttpResponse httpResponse = future.get(timeout, unit);
-                return new HttpResponse<T>(httpResponse, responseClass);
+                return new HttpResponse<>(httpResponse, responseClass, objectMapper);
             }
         };
     }
 
-    public static <T> HttpResponse<T> request(HttpRequest request, Class<T> responseClass) throws UnirestException {
-        HttpRequestBase requestObj = prepareRequest(request, false);
-        HttpClient client = ClientFactory.getHttpClient(); // The
-        // DefaultHttpClient
-        // is thread-safe
+    public static <T> HttpResponse<T> request(HttpRequest request, Class<T> responseClass, CloseableHttpClient httpClient,
+                                              Map<String, Object> defaultHeaders, final ObjectMapper objectMapper) {
+
+        HttpRequestBase requestObj = prepareRequest(request, false, defaultHeaders);
 
         org.apache.http.HttpResponse response;
         try {
-            response = client.execute(requestObj);
-            HttpResponse<T> httpResponse = new HttpResponse<T>(response, responseClass);
+            response = httpClient.execute(requestObj);
+            HttpResponse<T> httpResponse = new HttpResponse<>(response, responseClass, objectMapper);
             requestObj.releaseConnection();
             return httpResponse;
         } catch (Exception e) {
-            throw new UnirestException(e);
+            throw new RestClientException(e);
         } finally {
             requestObj.releaseConnection();
         }
     }
 
-    private static HttpRequestBase prepareRequest(HttpRequest request, boolean async) {
+    private static HttpRequestBase prepareRequest(HttpRequest request, boolean async, Map<String, Object> defaultHeaders) {
 
-        Object defaultHeaders = Options.getOption(Option.DEFAULT_HEADERS);
         if (defaultHeaders != null) {
-            @SuppressWarnings("unchecked")
-            Set<Entry<String, String>> entrySet = ((Map<String, String>) defaultHeaders).entrySet();
-            for (Entry<String, String> entry : entrySet) {
-                request.header(entry.getKey(), entry.getValue());
+            for (Entry<String, Object> entry : defaultHeaders.entrySet()) {
+                request.header(entry.getKey(), String.valueOf(entry.getValue()));
             }
         }
 
@@ -160,22 +163,22 @@ public class HttpClientHelper {
             request.header(USER_AGENT_HEADER, USER_AGENT);
         }
         if (!request.getHeaders().containsKey(ACCEPT_ENCODING_HEADER)) {
-            request.header(ACCEPT_ENCODING_HEADER, "gzip");
+            request.header(ACCEPT_ENCODING_HEADER, Constants.GZIP);
         }
 
         HttpRequestBase reqObj = null;
 
-        String urlToRequest = null;
+        String urlToRequest;
         try {
             URL url = new URL(request.getUrl());
-            URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), URLDecoder.decode(url.getPath(), "UTF-8"), "", url.getRef());
+            URI uri = new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), URLDecoder.decode(url.getPath(), Constants.UTF_8), "", url.getRef());
             urlToRequest = uri.toURL().toString();
             if (url.getQuery() != null && !url.getQuery().trim().equals("")) {
-                if (!urlToRequest.substring(urlToRequest.length() - 1).equals("?")) {
-                    urlToRequest += "?";
+                if (!urlToRequest.substring(urlToRequest.length() - 1).equals(Constants.QUESTION_MARK)) {
+                    urlToRequest += Constants.QUESTION_MARK;
                 }
                 urlToRequest += url.getQuery();
-            } else if (urlToRequest.substring(urlToRequest.length() - 1).equals("?")) {
+            } else if (urlToRequest.substring(urlToRequest.length() - 1).equals(Constants.QUESTION_MARK)) {
                 urlToRequest = urlToRequest.substring(0, urlToRequest.length() - 1);
             }
         } catch (Exception e) {
